openmediavault (5.5.8-1) stable; urgency=low

  * 

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 13 Aug 2020 18:13:18 +0200

openmediavault (5.5.7-1) stable; urgency=low

  * Update locales.
  * Install helper script which is used by the UDEV rules database
    which fixes the problem of some USB PATA/SATA bridge controllers.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 13 Aug 2020 17:40:07 +0200

openmediavault (5.5.6-1) stable; urgency=low

  * Fix bug in omv-firstaid when trying to set a new admin password.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 04 Aug 2020 20:46:45 +0200

openmediavault (5.5.5-1) stable; urgency=low

  * Update locales.
  * Various improvements.
  * Fix bug in 'omv.setup.fstab' when UUID is quoted.
  * Added the ability to have multiple WebGUI administrators.
    To do so simply assign users to the 'openmediavault-admin'
    group.
  * Introduce an UDEV rules database which fixes the problem of
    some USB PATA/SATA bridge controllers that they do not pass
    on the serial number of the attached disks.
  * Issue #769: Get overall health status of SAS drives.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 13 Jul 2020 21:02:53 +0200

openmediavault (5.5.4-1) stable; urgency=low

  * Update locales.
  * Various improvements.
  * Ignore exceptions when loading empty control panel cache files.
  * Issue #755: Fix xfs_growfs command line.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 28 Jun 2020 09:09:21 +0200

openmediavault (5.5.3-1) stable; urgency=low

  * Update locales.
  * Allow adding custom Salt states for 'omv.deploy.hosts'.
  * Remove download limit of 25 kB/s for cron-apt.
  * Issue #730: Allow chrony to serve clients.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 06 Jun 2020 23:09:16 +0200

openmediavault (5.5.2-1) stable; urgency=low

  * Various improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 02 Jun 2020 21:13:04 +0200